# DocETL-Runner

./: .env.example  .gitignore  README.md  main.py  pipeline.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docetl_runner/: __init__.py  __main__.py  cli.py  constants.py  discovery.py  docling.py  env.py  excel.py  log.py  pipeline.py  summary.py
