[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docetl-runner"
version = "0.1.0"
description = "Universal DocETL workflow runner for PDF processing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docetl[all]>=0.2.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyrate-limiter>=3.7.0,<4",
    "rich>=14.0.0",
]

[project.scripts]
docetl-runner = "docetl_runner.__main__:main"

[tool.setuptools.packages.find]
include = ["docetl_runner*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
